Some refactors :construction:

--- a/scripts/af2.pug
+++ b/scripts/af2.pug
@@ -1,4 +1,4 @@
 a-scene
+  a-boxy(position="0 0 0")
   a-box(position='-1 0 0')
-  a-box(position="1 0 0")
-  a-circle(position="-1 0 0")
+  //- a-circle(position="-1 0 0")
