WIP (+ better build)

--- a/scripts/af1.pug
+++ b/scripts/af1.pug
@@ -1,3 +1,18 @@
 a-scene
-  a-box(position="0 0 0")
+  a-box#a
+  a-box#b
+  a-box#c
+    a-box
+    a-box
+      a-box#xx
+//-
+  //- a-box.acontainer(position="0 0 0" y='' x="" z=0 class=con)
+  a-circle
+  a-box(position="-1 0 10")
+  a-box(position="1 0 0")
+    a-img#img
   a-box(position="-1 0 0")
+  a-box(position="1 0 0")
+  a-box(position="1 0 0")
+  a-line
+  a-line
