--- a/scripts/af2.pug
+++ b/scripts/af2.pug
@@ -1,4 +1,23 @@
 a-scene
-  a-boxy(position="0 0 0")
-  a-box(position='-1 0 0')
-  //- a-circle(position="-1 0 0")
+  a-box#b(p="1")
+  a-box#c
+    a-box
+    a-box
+      a-box#xy
+//-
+  a-circle
+    a-ba
+  a-box(position="-1 0 1")
+  a-box(position="1 0 0")
+  a-box(position="1 0 0")
+  a-box(position="1 0 0")
+    a-img#img
+  a-box(position="-1 0 0")
+  a-line
+  //- a-box(position="-1 0 0")
+  //- a-boxy(position="0 0 0")
+  //- a-box(position='-1 0 0')
+  //- div
+    div
+      div
+        a-circle(position="-1 0 0")
